--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "body-parser": "^1.20.1",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
+    "morgan": "^1.10.0",
     "pretty": "^2.0.0",
     "request": "^2.88.2"
   }
